--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__link-list">
-          <li class="header__links-list-item_no-bullit">
-            <a class="header__link_active" href="#0">главная</a>
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -32,10 +32,9 @@
         >
       </a>
       <address class="address">
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address__text">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -45,10 +44,10 @@
           <span class="aligned-text"
             >о<span class="letter-spacing-extended">но</span></span
           >
-          <span class="aligned-text_center"
+          <span class="aligned-text aligned-text_center"
             >те<span class="letter-spacing-extended">бе</span></span
           >
-          <span class="aligned-text_right"
+          <span class="aligned-text aligned-text_right"
             ><span class="letter-spacing-extended">н</span>ад<span
               class="no-letter-spacing"
               >о</span
@@ -59,14 +58,14 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="#0">
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -81,7 +80,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="#0">
               <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -99,7 +98,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="#0">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -115,7 +114,7 @@
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link">посмотреть больше</a>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__column">
@@ -147,60 +146,59 @@
           </div>
         </div>
       </section>
-      <footer class="footer">
-        <address class="address">
-          <a href="tel:+99995555555">+9 999 555 5555</a>
-          <br>
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
-        </address>
-        <nav class="footer__menu">
-          <ul class="footer__menu-list">
-            <li class="footer__menu-item">
-              <a class="footer__menu-link_active">главная</a>
-            </li>
-          </ul>
-          <ul class="footer__menu-list">
-            <li class="footer__menu-item">
-              <a class="footer__menu-link">посмотреть лоты</a>
-            </li>
-          </ul>
-          <ul class="footer__menu-list">
-            <li class="footer__menu-item">
-              <a class="footer__menu-link">об аукционе</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="footer__social-list">
-          <li class="footer__social-list-item">
-            <a class="footer__social-link">
-              <img
-                class="footer__social-icon"
-                src="./images/yt.svg"
-                alt="Иконка Youtube"
-              >
-            </a>
-          </li>
-          <li class="footer__social-list-item">
-            <a class="footer__social-link">
-              <img
-                class="footer__social-icon"
-                src="./images/vk.svg"
-                alt="Иконка VK"
-              >
-            </a>
-          </li>
-          <li class="footer__social-list-item">
-            <a class="footer__social-link">
-              <img
-                class="footer__social-icon"
-                src="./images/pinterest.svg"
-                alt="Иконка Pinterest"
-              >
-            </a>
+    </main>
+    <footer class="footer">
+      <address class="address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address__text">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-item">
+            <a class="footer__menu-link_active">главная</a>
           </li>
         </ul>
-      </footer>
-    </main>
+        <ul class="footer__menu-list">
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+        </ul>
+        <ul class="footer__menu-list">
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="Иконка Youtube"
+            >
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Иконка VK"
+            >
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="Иконка Pinterest"
+            >
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
