Отправка на третье ревью

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-item">
-            <a class="footer__menu-link_active">главная</a>
+            <a class="footer__menu-link footer__menu-link_active">главная</a>
           </li>
         </ul>
         <ul class="footer__menu-list">
